--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -1,3 +1,35 @@
+<div class="jumbotron">
+  <div class="container">
+    <h4>Find a Movie</h4>
+    <form (submit)="searchMovies()">
+      <input class="form-control" type="text" name="searchStr" [(ngModel)]="searchStr">
+      <br>
+      <button type="" class="btn btn-primary btn-lg">Find</button>
+      
+    </form>
+  </div>
+</div>
+
+<div *ngIf="searchRes" class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Search Results</h3>  
+  </div>
+  <div class="panel-body">
+    <div class="row is-flex">
+      <div *ngFor="let movie of searchRes;let i=index" class="col-md-2">        
+        <div *ngIf="i < 18">
+          <img *ngIf="movie.poster_path" class="thumbnail" src="http://image.tmdb.org/t/p/w500/{{movie.poster_path}}" alt="">
+          
+          <strong>{{movie.title}}</strong>
+          <p>{{movie.release_date}}</p>    
+          
+          <p><a class="btn btn-default btn-block" routerLink="/movie/{{movie.id}}">View Details</a></p>
+        </div>
+      </div>
+    </div>    
+  </div>  
+</div>
+
 <div class="panel panel-default">
   <div class="panel-heading">
     <h3 class="panel-title">Popular Movies</h3>  
@@ -11,7 +43,7 @@
           <strong>{{movie.title}}</strong>
           <p>{{movie.release_date}}</p>    
           
-          <p><a class="btn btn-default btn-block" href="#">View Details</a></p>
+          <p><a class="btn btn-default btn-block" routerLink="/movie/{{movie.id}}">View Details</a></p>
         </div>
       </div>
     </div>    
@@ -29,7 +61,7 @@
           <img *ngIf="movie.poster_path" class="thumbnail" src="http://image.tmdb.org/t/p/w500/{{movie.poster_path}}" alt="">          
           <strong>{{movie.title}}</strong>
           <p>{{movie.release_date}}</p>
-          <p><a class="btn btn-default btn-block" href="#">View Details</a></p>
+          <p><a class="btn btn-default btn-block" routerLink="/movie/{{movie.id}}">View Details</a></p>
         </div>
       </div>
     </div>    
